--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-29  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-02-28  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation.
