Don't hardcode font sizes. Fixes bug #123478
2004-03-01  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-sidebar-title.c:
	Don't hardcode font sizes. Fixes bug #123478

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-01  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-sidebar-title.c:
+	Don't hardcode font sizes. Fixes bug #123478
+
 2004-02-27  Dave Camp  <dave@ximian.com>
 
 	* src/file-manager/fm-list-model.c: (fm_list_model_get_value):
