--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-02  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-02-29  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
