--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-02  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (file_list_all_are_folders):
+	Fix browse context menu for NautilusDesktopIconFiles.
+
 2004-03-01  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-sidebar-title.c:
