Correctly handle cut-off utf8 text.
2004-03-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_extract_top_left_text):
	Correctly handle cut-off utf8 text.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-02  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_extract_top_left_text):
+	Correctly handle cut-off utf8 text.
+
+2004-03-02  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c (file_list_all_are_folders):
 	Fix browse context menu for NautilusDesktopIconFiles.
 
