Updated Thai translation.
2004-03-03  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-02 01:17-0600\n"
+"PO-Revision-Date: 2004-03-03 03:02-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -716,7 +716,7 @@ msgstr "ปรับแต่งโปรแกรมบริการเคร
 
 #: data/serverconfig.desktop.in.h:2 data/serverconfig.directory.in.h:2
 msgid "Server Settings"
-msgstr "ปรับค่าเซิร์ฟเวร์อ"
+msgstr "ปรับค่าเซิร์ฟเวอร์"
 
 #: data/serverconfig.directory.in.h:1
 msgid "Configure network services"
@@ -3700,7 +3700,7 @@ msgstr "โฟลเดอร์บ้าน"
 
 #: nautilus-home.desktop.in.h:2
 msgid "View your home folder in the Nautilus file manager"
-msgstr "เปิดโฟลเดอร์บ้านใน Nautilus file manager"
+msgstr "ดูโฟลเดอร์บ้านในตัวจัดการแฟ้ม Nautilus"
 
 #: nautilus.desktop.in.h:1
 msgid "Browse Filesystem"
@@ -6650,7 +6650,7 @@ msgstr "แสดงเนื้อหาล่าสุดของตำแห
 
 #: src/nautilus-shell-ui.xml.h:9
 msgid "Edit Nautilus preferences"
-msgstr "แก้ไขลักษณะที่ปรากฏของ Nautilus"
+msgstr "ปรับแต่ง Nautilus"
 
 #: src/nautilus-shell-ui.xml.h:11
 msgid "Go to Empty CD folder"
@@ -7057,11 +7057,11 @@ msgstr "ตั้งขนาดย่อขยายสำหรับมุม
 
 #: src/network-scheme.desktop.in.h:1
 msgid "Network Servers"
-msgstr "เซิร์ฟเวอรเครือข่าย"
+msgstr "เซิร์ฟเวอร์ในเครือข่าย"
 
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
-msgstr "ดูเซิร์ฟเวอร์เครือข่ายใน Nautilus"
+msgstr "ดูเซิร์ฟเวอร์ในเครือข่ายด้วย Nautilus"
 
 #~ msgid "AFFS Volume"
 #~ msgstr "AFFS Volume"
