--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-3  Arafat Medini  <lumina@silverpen.de>
+
+	* ar.po: Updated Arabic translation.
+
 2004-03-02  Paisa Seeluangsawat  <paisa@users.sf.net>
 
 	* th.po: Updated Thai translation.
