--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-03  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+	* pa.po: Added Punjabi translation by
+	 Amanpreet Singh Alam <amanlinux@netscape.net>.
+
 2004-03-3  Arafat Medini  <lumina@silverpen.de>
 
 	* ar.po: Updated Arabic translation.
