remove semi-duplicated message that was breaking the build. Was gettext on
2004-03-03  Jody Goldberg <jody@gnome.org>

	* ar.po : remove semi-duplicated message that was breaking the build.
	  Was gettext on crack ? or was that really a duplicate.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-03  Jody Goldberg <jody@gnome.org>
+
+	* ar.po : remove semi-duplicated message that was breaking the build.
+	  Was gettext on crack ? or was that really a duplicate.
+
 2004-03-04  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
