--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-03  Arafat Medini  <lumina@silverpen.de>
+
+	* ar.po: Updated faulty Arabic translation.
+
 2004-03-03  Jody Goldberg <jody@gnome.org>
 
 	* ar.po : remove semi-duplicated message that was breaking the build.
