Add cd creator to navigation window as well as spatial. Fixes bug #134913.
2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window-ui.xml:
	Add cd creator to navigation window as well as spatial.
	Fixes bug #134913.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-04  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-navigation-window-ui.xml:
+	Add cd creator to navigation window as well as spatial.
+	Fixes bug #134913.
+
 2004-03-03  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "pa" for Punjabi in ALL_LINGUAS.
