Updated Swedish translation.
2004-03-04  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/sv.po
+++ b/po/sv.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "POT-Creation-Date: 2004-02-26 01:00+0100\n"
-"PO-Revision-Date: 2004-02-26 01:01+0100\n"
+"PO-Revision-Date: 2004-03-04 11:11+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1741,11 +1741,11 @@ msgstr "Typen av fil."
 #: libnautilus-private/nautilus-column-utilities.c:65
 #: src/file-manager/fm-search-list-view.c:531
 msgid "Date Modified"
-msgstr "Modifieringsdatum"
+msgstr "Ändringsdatum"
 
 #: libnautilus-private/nautilus-column-utilities.c:66
 msgid "The date the file was modified."
-msgstr "Datumet då filen modifierades."
+msgstr "Datumet då filen ändrades."
 
 #: libnautilus-private/nautilus-column-utilities.c:73
 msgid "Date Accessed"
@@ -2933,7 +2933,7 @@ msgstr "Efter typ"
 #: libnautilus-private/nautilus-global-preferences.c:189
 #: src/nautilus-file-management-properties.glade.h:41
 msgid "By Modification Date"
-msgstr "Efter modifieringsdatum"
+msgstr "Efter ändringsdatum"
 
 #: libnautilus-private/nautilus-global-preferences.c:190
 #: src/nautilus-file-management-properties.glade.h:40
@@ -4645,12 +4645,12 @@ msgstr "Sortera ikoner i rader efter typ"
 
 #: src/file-manager/fm-icon-view.c:180
 msgid "by Modification _Date"
-msgstr "efter modifierings_datum"
+msgstr "efter ändrings_datum"
 
 #: src/file-manager/fm-icon-view.c:181
 #: src/file-manager/nautilus-icon-view-ui.xml.h:12
 msgid "Keep icons sorted by modification date in rows"
-msgstr "Sortera ikoner i rader efter modifieringsdatum"
+msgstr "Sortera ikoner i rader efter ändringsdatum"
 
 #: src/file-manager/fm-icon-view.c:187
 msgid "by _Emblems"
@@ -4975,8 +4975,8 @@ msgid ""
 "Search results may not include items modified after %s, when your drive was "
 "last indexed."
 msgstr ""
-"Sökresultat innehåller inte nödvändigtvis objekt som är modifierade efter %"
-"s, då din hårddisk senast indexerades."
+"Sökresultat innehåller inte nödvändigtvis objekt som ändrats efter %s, då "
+"din hårddisk senast indexerades."
 
 #: src/file-manager/fm-search-list-view.c:144
 msgid "Search Results"
@@ -5521,7 +5521,7 @@ msgstr "_Ordna objekt"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:2
 msgid "By Modification _Date"
-msgstr "Efter modifierings_datum"
+msgstr "Efter ändrings_datum"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:3
 msgid "By _Emblems"
@@ -6146,7 +6146,7 @@ msgstr "åtkomstdatum"
 
 #: src/nautilus-file-management-properties.glade.h:78
 msgid "date modified"
-msgstr "modifieringsdatum"
+msgstr "ändringsdatum"
 
 #: src/nautilus-file-management-properties.glade.h:79
 msgid "group"
@@ -6803,7 +6803,7 @@ msgstr "[Sök efter] Med emblem [som innehåller \"Viktigt\"]"
 
 #: src/nautilus-search-bar-criterion.c:78
 msgid "[Search for] Last Modified [before yesterday]"
-msgstr "[Sök efter] Senast modifierad [är innan igår]"
+msgstr "[Sök efter] Senast ändrad [är innan igår]"
 
 #: src/nautilus-search-bar-criterion.c:79
 msgid "[Search for] Owner [is not root]"
@@ -6891,35 +6891,35 @@ msgstr "[Med emblem] inte märkt med [Viktigt]"
 
 #: src/nautilus-search-bar-criterion.c:130
 msgid "[Last modified date] is [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är [00-01-24]"
+msgstr "[Senaste ändringsdatum] är [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:131
 msgid "[Last modified date] is not [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är inte [00-01-24]"
+msgstr "[Senaste ändringsdatum] är inte [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:132
 msgid "[Last modified date] is after [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är efter [00-01-24]"
+msgstr "[Senaste ändringsdatum] är efter [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:133
 msgid "[Last modified date] is before [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är före [00-01-24]"
+msgstr "[Senaste ändringsdatum] är före [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:135
 msgid "[Last modified date] is today"
-msgstr "[Senaste modifieringsdatum] är idag"
+msgstr "[Senaste ändringsdatum] är idag"
 
 #: src/nautilus-search-bar-criterion.c:136
 msgid "[Last modified date] is yesterday"
-msgstr "[Senaste modifieringsdatum] är igår"
+msgstr "[Senaste ändringsdatum] är igår"
 
 #: src/nautilus-search-bar-criterion.c:138
 msgid "[Last modified date] is within a week of [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är inom en vecka från [00-01-24]"
+msgstr "[Senaste ändringsdatum] är inom en vecka från [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:139
 msgid "[Last modified date] is within a month of [1/24/00]"
-msgstr "[Senaste modifieringsdatum] är inom en månad från [00-01-24]"
+msgstr "[Senaste ändringsdatum] är inom en månad från [00-01-24]"
 
 #: src/nautilus-search-bar-criterion.c:158
 msgid "[File owner] is [root]"
