--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-04  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2004-03-03  Arafat Medini  <lumina@silverpen.de>
 
 	* ar.po: Updated faulty Arabic translation.
