--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-04  Dave Camp  <dave@ximian.com>
+
+	* libnautilus-extension/nautilus-file-info.c:
+	(nautilus_file_info_invalidate_extension_info):
+	* libnautilus-extension/nautilus-file-info.h:
+	* libnautilus-private/nautilus-file.c:
+	(nautilus_file_invalidate_extension_info),
+	(nautilus_file_info_iface_init): New function.
+
 2004-03-04  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-navigation-window-ui.xml:
