--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-03-05  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-factory.c:
+	(nautilus_icon_factory_instance_init):
+	Add image/bmp
+	
+	* nautilus-file-management-properties.desktop.in:
+	Nicer icon
+
+2004-03-05  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-mime-actions.[ch]:
 	Add nautilus_mime_get_default_fallback_component_for_file which
 	ignores the metadata specified component.
