--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-05  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-application.c (volume_unmounted_callback):
+	Call this on pre_unmount too, and find windows on the device
+	better.
+
+2004-03-05  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-factory.c:
 	(nautilus_icon_factory_instance_init):
 	Add image/bmp
