Updated Thai translation.
2004-03-05  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-03 03:02-0600\n"
+"PO-Revision-Date: 2004-03-05 16:52-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -345,7 +345,7 @@ msgstr "ศิลป์"
 
 #: data/browser.xml.h:3
 msgid "Azul"
-msgstr ""
+msgstr "น้ำเงิน"
 
 #: data/browser.xml.h:4
 msgid "Black"
@@ -361,7 +361,7 @@ msgstr "น้ำเงินหยาบ"
 
 #: data/browser.xml.h:7
 msgid "Blue Type"
-msgstr "น้ำเงินอักษร"
+msgstr "พิมพ์น้ำเงิน"
 
 #: data/browser.xml.h:8
 msgid "Brushed Metal"
@@ -411,9 +411,10 @@ msgstr "จ๊าบ"
 msgid "Cork"
 msgstr "ไม้ก๊อก"
 
+# Definitly not Thai countertop, so just look at the pattern and make up a name.
 #: data/browser.xml.h:20
 msgid "Countertop"
-msgstr ""
+msgstr "ทารก"
 
 #: data/browser.xml.h:21
 msgid "Danger"
@@ -503,9 +504,11 @@ msgstr "GNOME"
 msgid "Granite"
 msgstr "หินอัคนี"
 
+# Can't remember if ส้มโอ is really this color.
+# Grapefruit and ส้มโอ look very different from the outside though.
 #: data/browser.xml.h:44
 msgid "Grapefruit"
-msgstr ""
+msgstr "ส้มโอ"
 
 #: data/browser.xml.h:45
 msgid "Green Weave"
@@ -3968,7 +3971,7 @@ msgstr "แฟ้มมากเกินไป"
 
 #: src/file-manager/fm-directory-view.c:3242
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr "ย้ายแฟ้มไปลงถังขยะไม่ได้ จะลบทิ้งถาวรเลยไหม ?"
+msgstr "ย้ายไปลงถังขยะไม่ได้ จะลบทิ้งถาวรเลยไหม?"
 
 #: src/file-manager/fm-directory-view.c:3243
 #, c-format
