--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-05  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-03-04  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
