--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-06  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2004-03-05  Paisa Seeluangsawat  <paisa@users.sf.net>
 
 	* th.po: Updated Thai translation.
