--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-05 16:52-0600\n"
+"PO-Revision-Date: 2004-03-05 23:27-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -6942,7 +6942,7 @@ msgstr ""
 
 #: src/nautilus-window-manage-views.c:1350
 msgid "Check that an SMB server is running in the local network."
-msgstr "ตรวจดูว่ามีเซิร์ฟเวอร์ SMB ทำงานอยู่ในเครื่อข่ายท้องถิ่น"
+msgstr "ตรวจดูว่ามีเซิร์ฟเวอร์ SMB ทำงานอยู่ในเครือข่ายท้องถิ่น"
 
 #: src/nautilus-window-manage-views.c:1360
 msgid ""
