Updated Belarusian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-06  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian translation.
+
 2004-03-06  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
