Updated Thai translation.
2004-03-06  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-05 23:27-0600\n"
+"PO-Revision-Date: 2004-03-06 23:35-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -4525,7 +4525,7 @@ msgstr "รูปเท่านั้น"
 #: src/file-manager/fm-properties-window.c:914
 #: src/file-manager/fm-tree-view.c:1053
 msgid "Properties"
-msgstr "คุณ_สมบัติ"
+msgstr "คุณสมบัติ"
 
 #: src/file-manager/fm-properties-window.c:917
 #, c-format
@@ -5627,7 +5627,7 @@ msgstr "เชื่อมต่อไปเซิร์ฟเวอร์"
 
 #: src/nautilus-connect-server-dialog.c:191
 msgid "Link _name:"
-msgstr "_ชื่อลิงค์:"
+msgstr "_ชื่อลิงก์:"
 
 #: src/nautilus-connect-server-dialog.c:210
 msgid "_Location (URL):"
