Updated Thai translation.
2004-03-07  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-06 23:35-0600\n"
+"PO-Revision-Date: 2004-03-07 03:57-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -293,7 +293,7 @@ msgstr "โรงงานมุมมองข้อความ"
 
 #: components/text/Nautilus_View_text.server.in.in.h:6
 msgid "View as Text"
-msgstr "ดูเป็นข้อความ"
+msgstr "มุมมองข้อความ"
 
 #: components/text/nautilus-text-view-ui.xml.h:1
 #: libnautilus/nautilus-clipboard-ui.xml.h:2
@@ -3642,7 +3642,7 @@ msgstr "ทำซำ้การแก้ไขที่ทำไป"
 #: libnautilus-private/nautilus-view-identifier.c:62
 #, c-format
 msgid "View as %s"
-msgstr "เปิดเป็น %s"
+msgstr "มุมมอง %s"
 
 #: libnautilus-private/nautilus-view-identifier.c:68
 #, c-format
@@ -6232,7 +6232,7 @@ msgstr "ข้อมูลรายละเอียด"
 #. Add "View as..." extra bonus choice.
 #: src/nautilus-navigation-window.c:701 src/nautilus-shell-ui.xml.h:27
 msgid "View as..."
-msgstr "ดูเป็น..."
+msgstr "มุมมอง..."
 
 #: src/nautilus-navigation-window.c:733
 #, c-format
@@ -7441,9 +7441,6 @@ msgstr "ดูเซิร์ฟเวอร์ในเครือข่าย
 
 #~ msgid "Hardware view"
 #~ msgstr "มุมมองฮาร์ดแวร์"
-
-#~ msgid "View as Hardware"
-#~ msgstr "มองเป็นฮาร์ดแวร์"
 
 #~ msgid "hardware view"
 #~ msgstr "มุมมองฮาร์ดแวร์"
