Updated Thai translation.
2004-03-07  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-07 04:20-0600\n"
+"PO-Revision-Date: 2004-03-07 04:26-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -5627,7 +5627,7 @@ msgstr "เชื่อมต่อไปเซิร์ฟเวอร์"
 
 #: src/nautilus-connect-server-dialog.c:191
 msgid "Link _name:"
-msgstr "_ชื่อลิงก์:"
+msgstr "ตั้ง_ชื่อจุดเชื่อม:"
 
 #: src/nautilus-connect-server-dialog.c:210
 msgid "_Location (URL):"
