--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-07  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Improve Finnish translation.
+
 2004-03-06  Mətin Əmirov  <metin@karegen.com>
 
 	* az.po: Translation updated.
