--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-07  Alexander Winston  <alexander.winston@comcast.net>
+
+	* en_CA.po: Updated Canadian English translation to "1489
+	translated messages, 5 fuzzy translations." status.
+
 2004-03-07  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Improve Finnish translation.
