--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-03-07 21:14-0600\n"
+"PO-Revision-Date: 2004-03-07 21:20-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -5784,7 +5784,7 @@ msgstr "ตัวอย่าง"
 
 #: src/nautilus-file-management-properties.glade.h:59
 msgid "Preview _sound files:"
-msgstr "เ_ล่นตัวอย่างจากแฟ้มเสียง:"
+msgstr "เล่นตัวอย่างจากแฟ้มเ_สียง:"
 
 #: src/nautilus-file-management-properties.glade.h:60
 msgid "Show _only folders"
