Handle shift-clicking on initial icon selection for range-selection. Patch
2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (handle_icon_button_press):
	Handle shift-clicking on initial icon selection for range-selection.
	Patch from Tony Tsui, bug #136377

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-08  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c (handle_icon_button_press):
+	Handle shift-clicking on initial icon selection for range-selection.
+	Patch from Tony Tsui, bug #136377
+
 2004-03-07  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* src/nautilus-window-manage-views.c
