--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian translation.
+
 2004-03-07  Alexander Winston  <alexander.winston@comcast.net>
 
 	* en_CA.po: Updated Canadian English translation to "1489
