Increase canel open timeout delay to 5 seconds.
2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (fm_directory_view_activate_file):
	Increase canel open timeout delay to 5 seconds.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-03-08  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-directory-view.c (fm_directory_view_activate_file):
+	Increase canel open timeout delay to 5 seconds.
+
+2004-03-08  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-file-management-properties.c (nautilus_file_management_properties_dialog_set_icons):
+	Better icon for file manager properties.
+	
+2004-03-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-bonobo-extensions.c:
 	(bonobo_activation_activation_callback), (activation_timed_out),
 	(nautilus_bonobo_activate_from_id),
