--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
-This is nautilus 2.5.8, the file manager for the Gnome 2 desktop.
+This is nautilus 2.5.90, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.5.8 are:
+* Beter typeahead in list view
+* "browse" context menu item in more places
+* Added go -> cd burner in browser mode
+* Fallback to normal icon view if there is a problem launching another view
+* Close windows on unmounted directories
+* Fix crashes
+* Longer delay until cancel open dialog opens
 
 Major changes since 2.5.7 are:
 * Fix crash
