--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-08  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS: 
+	* configure.in:
+	Update to 2.5.90
+
+2004-03-08  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c (fm_directory_view_activate_file):
 	Increase canel open timeout delay to 5 seconds.
 
