Don't keep getting slow_mime_type if get_info failed
2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c (lacks_slow_mime_type):
	Don't keep getting slow_mime_type if get_info failed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-directory-async.c (lacks_slow_mime_type):
+	Don't keep getting slow_mime_type if get_info failed
+
 === nautilus 2.5.90 ===
 
 2004-03-08  Alexander Larsson  <alexl@redhat.com>
