--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Danilo Šegan  <dsegan@gmx.net>
+
+	* configure.in: Added "sr@ije" to ALL_LINGUAS.
+
 2004-03-08  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-async.c (lacks_slow_mime_type):
