--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzić 
+	<bojans@teol.net>.
+
 === nautilus 2.5.90 ===
 
 2004-03-08  Ales Nyakhaychyk  <nab@mail.by>
