--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08 Alastair McKinstry <mckinstry@computer.org>
+
+	* ga.po: Updated Irish translation.
+
 2004-03-08  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzić 
